hasta acá lo acepto
Bel me obliga a seguir

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        //linea magica para que funcione el responsive//
         <link rel="stylesheet" href="style.css" />
         <title>Ejercicio</title>
     </head>
@@ -18,6 +17,9 @@
                     <li>Servicios</li>
                     <li>Contacto</li>
                 </ul>
+            </div>
+            <div class="hamburguesa">
+                <img src="./menu.png">
             </div>
         </div>
         <div class="contenido">
