--- a/quien-soy.html
+++ b/quien-soy.html
@@ -16,6 +16,9 @@
                     <li>Contacto</li>
                 </ul>
             </div>
+            <div class="hamburguesa">
+                <img src="./menu.png">
+            </div>
         </div>
         <div class="titulo">
             <p><h1>NOSOTRAS</h1></p>
@@ -54,7 +57,7 @@
         </div>
         <div class="footer">
             <div class="contacto">
-                <img src="" alt="sobre">contacto@nafala.com                
+                <img src="./envelope.png" alt="sobre">contacto@nafala.com               
             </div>
             <div class="redes">
                 <img src="./face.png" alt="logo facebook">
